fix: Guidance block vertically center align content

--- a/draft-packages/guidance-block/KaizenDraft/GuidanceBlock/GuidanceBlock.scss
+++ b/draft-packages/guidance-block/KaizenDraft/GuidanceBlock/GuidanceBlock.scss
@@ -206,6 +206,10 @@ $scene-illustration-size: 300px;
     }
   }
 
+  .descriptionAndActions {
+    margin: auto 0;
+  }
+
   .descriptionContainer {
     text-align: left;
     max-width: unset;
